--- a/Wishlist/pageConnexion.css
+++ b/Wishlist/pageConnexion.css
@@ -1,19 +1,35 @@
 @CHARSET "ISO-8859-1";
 
+
+
+.divCo
+{
+	position:relative;
+	text-align: left;
+	margin:0px auto;
+	top:25%;
+	float:right;
+	right:2%;
+}
+
 .headerConnexion
 ul{
-	display:inline-block;
+	display: inline-block;
 	position:relative;
 	vertical-align: top;
+	margin:0px auto;
+	top:25%
 }
 
 .headerConnexion
 li{
 	display:block;
 	position:relative;
-	font-family:impact;
+	font-family:helvetica;
 	font-size: 13px;
 	color: white;
+	margin:0px auto;
+	top:25%;
 }
 
 .text
@@ -25,17 +41,53 @@ li{
 {
 	background-color:#C7454E;
 	border-bottom: 2px outset #C7454E;
-	position: absolute;
+	position: fixed;
 	top:0px;
 	left:0px;
 	margin:0px auto;
 	width:100%;
+	height:10%;
 }
 
-section
+.sectionInscription
 {
-	position:absolute;
-	top:100px;
-	left:50%;
-	width:100%;
+	position:relative;
+	margin:0px auto;
+	top:20%;
+	margin-top:8%;
+	margin-right:10%;
+	float:right;
+}
+
+table, th, td, tr
+{
+	border-spacing: 0;
+	padding: 0;
+}
+
+th
+{
+	font-family: helvetica;
+	height: 80%;
+}
+
+select
+{
+	width: 20%;
+	height: 60%;
+}
+
+.tdInput
+{
+	height: 40px;
+}
+
+.inputFull
+{
+	width: 100%;
+	height:80%;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-style: solid;
 }
