--- a/Wishlist/menuPrincipal.css
+++ b/Wishlist/menuPrincipal.css
@@ -40,6 +40,11 @@ transition: .0s all .0s;
 td:hover ul{
 max-height:15em;
 }
+#menuPrincipal
+{
+border-collapse: separate;
+border-spacing: 0 0;
+}
 
 
 
@@ -224,29 +229,78 @@ background-color: #C42020;
 
 
 
-/*====================================== LE CONTENT =========================================*/
+/*=======================================le body===========================================*/
 
-
-
-
-#sousMenu
-a{
-	color:#000;
+body
+{
+	background-color:#EDEDED;
 }
 
 
+/*========================================= le tableau ===============================================*/
+
+#principal
+{
+margin-top:5%;
+margin-left:28%;
+}
+#principal
+tr td
+{
+vertical-align : top;
+}
+
+/*================================== le sous menu =======================================*/
+
+#sousMenu
+{
+	width:auto;
+	height:auto;
+}
+#sousMenu
+ul{
+list-style:none;
+}
+#sousMenu
+ul li{
+display:inherit;
+}
+#sousMenu
+li{
+position:relative;
+background-color: #EDEDED;
+padding:4px 5px;
+}
+#sousMenu
+li a{
+text-decoration:none;
+display:block;
+font-family:verdana;
+font-size:12px;
+color:#575757;
+}
+#sousMenu
+li:hover{
+position:relative;
+border-radius:3px 3px 3px 3px;
+background-color: #E0E1E0;
+padding:4px 5px;
+}
 
 
+/*==================================== le content ===============================================*/
 
-
-
-
-
-
-
-
-
-
+#content
+{
+	color:#2E2E2E;
+	background-color:#FEFEFE;
+	width:auto;
+	height:750px;
+	border-bottom: 1px #D7D8D8 groove;
+	border-right: 1px #D7D8D8 groove;
+	border-top: 1px #D7D8D8 ridge;
+	border-left: 1px #D7D8D8 ridge;
+}
 
 
 
