--- a/Wishlist/interfaceAvecMenu.css
+++ b/Wishlist/interfaceAvecMenu.css
@@ -238,7 +238,7 @@ body
 
 
 
-/*======================================= le titre ===========================================*/
+/*======================================= le div titre ===========================================*/
 
 #titre
 {
@@ -273,7 +273,7 @@ tr td
 vertical-align : top;
 }
 
-/*================================== le sous menu =======================================*/
+/*================================== le div sous menu =======================================*/
 
 #sousMenu
 {
@@ -312,7 +312,7 @@ color:#575757;
 }
 
 
-/*==================================== le content ===============================================*/
+/*==================================== le div content ===============================================*/
 
 #content
 {
