--- a/Wishlist/interfaceAvecMenu.css
+++ b/Wishlist/interfaceAvecMenu.css
@@ -319,7 +319,7 @@ color:#575757;
 	color:#2E2E2E;
 	background-color:#FEFEFE;
 	width:auto;
-	height:750px;
+	height:auto;
 	border-bottom: 1px #D7D8D8 groove;
 	border-right: 1px #D7D8D8 groove;
 	border-top: 1px #D7D8D8 ridge;
