--- a/Wishlist/pageConnexion.css
+++ b/Wishlist/pageConnexion.css
@@ -39,8 +39,8 @@ li{
 
 .headerConnexion
 {
-	background-color:#C7454E;
-	border-bottom: 2px outset #C7454E;
+	background-color:#D03030;
+	border-bottom: 2px outset #D03030;
 	position: fixed;
 	top:0px;
 	left:0px;
