--- a/Wishlist/interfaceAvecMenu.css
+++ b/Wishlist/interfaceAvecMenu.css
@@ -329,8 +329,24 @@ color:#575757;
 	border-right: 1px #D7D8D8 groove;
 	border-top: 1px #D7D8D8 ridge;
 	border-left: 1px #D7D8D8 ridge;
-	padding:6px 10px;
+	padding:10px 10px;
 }
+#contentAvecMenu
+table:first-child tr td{
+border:1px solid black;
+width:auto;
+height:auto;
+color:green;
+}
+#contentAvecMenu
+table:first-child{
+border:1px solid black;
+width:auto;
+height:auto;
+background-color:#3DF2D9;
+}
+
+
 
 
 /*==================================== le div principal ===============================================*/
