--- a/Wishlist/interfaceAvecMenu.css
+++ b/Wishlist/interfaceAvecMenu.css
@@ -333,17 +333,23 @@ color:#575757;
 }
 #contentAvecMenu
 table:first-child tr td{
-border:1px solid black;
 width:auto;
 height:auto;
-color:green;
+border:1px solid black;
+vertical-align:bottom;
 }
 #contentAvecMenu
 table:first-child{
-border:1px solid black;
 width:auto;
 height:auto;
-background-color:#3DF2D9;
+}
+#contentAvecMenu
+table:first-child tr:last-child td{
+height:20%;
+}
+#contentAvecMenu
+table:first-child tr:first-child td{
+font-weight: bold;
 }
 
 
