--- a/Wishlist/interfaceAvecMenu.css
+++ b/Wishlist/interfaceAvecMenu.css
@@ -368,7 +368,7 @@ border: 3px #D7D8D8 solid;
 	margin-left:28%;
 	color:#2E2E2E;
 	background-color:#FEFEFE;
-	width:auto;
+	width:44%;
 	height:750px;
 	border-bottom: 1px #D7D8D8 groove;
 	border-right: 1px #D7D8D8 groove;
