--- a/Wishlist/interfaceAvecMenu.css
+++ b/Wishlist/interfaceAvecMenu.css
@@ -502,11 +502,54 @@ tr:hover td:first-child
 
 
 
+/*================================= liste de listes perso de cadeaux =====================================*/
 
+#mesListesCadeaux
+{
+	width:100%;
+	border-collapse: collapse;
+}
+#mesListesCadeaux
+tr td{
+	border-top: 1px solid #C6C5C5;
+	border-bottom: 1px solid #C6C5C5;
+	text-align:center;
+	vertical-align:middle;
+	background-color:#FBFBFB;
+}
+.btnMaListe
+{
+	width:100%;
+	height: 40px;
+	font-size:25px;
+	font-family:verdana;
+	
+	border:0px;
+	background-color:#FBFBFB;
+    color:#C4C4C4;
+    text-decoration: none;
+}
 
+#mesListesCadeaux
+tr:hover td button
+{
+	background-color:#F6F5F5;
+	color:#B0B0B0;
+}
+#mesListesCadeaux
+tr:hover td
+{
+	background-color:#F6F5F5;
+}
 
-
-
+#btnCreerListe
+{
+padding:0;
+margin:0 0;
+list-style:none;
+margin-left:auto;
+margin-right:auto;
+}
 
 
 
