--- a/Wishlist/interfaceAvecMenu.css
+++ b/Wishlist/interfaceAvecMenu.css
@@ -460,7 +460,7 @@ tr td{
 	border-bottom: 1px solid #E3E3E3;
 	text-align:center;
 	vertical-align:middle;
-	color:#2E2E2E;
+	color:#7C7C7C;
 	background-color:#FBFBFB;
 }
 .btnSupCadeau
@@ -521,12 +521,11 @@ tr td{
 {
 	width:100%;
 	height: 40px;
-	font-size:25px;
 	font-family:verdana;
 	
 	border:0px;
 	background-color:#FBFBFB;
-    color:#C4C4C4;
+    color:#7C7C7C;
     text-decoration: none;
 }
 
@@ -534,7 +533,6 @@ tr td{
 tr:hover td button
 {
 	background-color:#F6F5F5;
-	color:#B0B0B0;
 }
 #mesListesCadeaux
 tr:hover td
@@ -544,15 +542,190 @@ tr:hover td
 
 #btnCreerListe
 {
-padding:0;
-margin:0 0;
-list-style:none;
+border-collapse: separate;
 margin-left:auto;
 margin-right:auto;
+width:190px;
+}
+#btnCreerListe
+tr td
+{
+text-align:center;
+}
+#btnCreerListe
+tr td a{
+text-decoration:none;
+display:block;
+padding:8px 10px;
+color:#F6F5F5;
+font-family:verdana;
+font-size:12px;
+font-weight: bold;
+background-color: #E97373;
+}
+#btnCreerListe
+tr td a:hover {
+background-color: #DF4C4C;
 }
 
 
+/*=========================================== liste de mes cadeaux ===========================================*/
 
+#maListeCadeaux
+{
+	width:100%;
+	border-collapse: collapse;
+}
+
+#maListeCadeaux
+tr td
+{
+	border-top: 1px solid #C6C5C5;
+	border-bottom: 1px solid #C6C5C5;
+}
+
+#maListeCadeaux
+tr td:first-child
+{
+	width: 60%;
+}
+
+#maListeCadeaux
+tr td
+{
+	text-align:center;
+	vertical-align:middle;
+}
+
+#maListeCadeaux
+tr td:last-child
+{
+	width: 15%;
+}
+
+#reserve
+{
+	font-size:9px;
+}
+
+#ligneNonReserve
+td
+{
+	background-color:#FBFBFB;
+	color:#7C7C7C;
+}
+
+#ligneReserve
+td
+{
+	background-color:#FBFBFB;
+	color:#C36767;
+}
+
+#ligneAjouter
+td
+{
+background-color:#FBFBFB;
+}
+#ligneAjouter:hover td
+{
+	background-color:#F2F1F1;
+}
+
+.btnMesCadeaux
+{
+	width:100%;
+	height: 40px;
+	font-size:25px;
+	font-family:verdana;
+	
+	border:0px;
+	background-color:#FBFBFB;
+    color:#E3E3E3;
+    text-decoration: none;
+}
+
+.btnMesCadeauxR
+{
+	width:100%;
+	height: 40px;
+	font-size:25px;
+	font-family:verdana;
+	
+	border:0px;
+	background-color:#FBFBFB;
+    color:#F4C6C6;
+    text-decoration: none;
+}
+
+#maListeCadeaux
+tr:hover td:nth-child(3) button
+{
+	background-color:#D94141;
+	color:#C02A2A;
+}
+
+#ligneNonReserve:hover td:last-child
+{
+	background-color:#D94141;
+}
+#ligneNonReserve:hover td:first-child
+{
+	background-color:#F2F1F1;
+}
+#ligneNonReserve:hover td:nth-child(2)
+{
+	background-color:#F2F1F1;
+}
+
+#ligneReserve:hover td:last-child
+{
+	background-color:#D94141;
+}
+#ligneReserve:hover td:first-child
+{
+	background-color:#F2F1F1;
+}
+#ligneReserve:hover td:nth-child(2)
+{
+	background-color:#F2F1F1;
+}
+
+.btnFormAddCadeau
+{
+	width:100%;
+	height: 40px;
+	font-family:verdana;
+	font-weight: bold;
+	border:0px;
+	background-color:#FBFBFB;
+    color:#7C7C7C;
+    text-decoration: none;
+}
+
+#ligneAjouter:hover td:first-child button
+{
+	background-color:#F2F1F1;
+}
+
+
+/*==================================================== bouton de validation =======================================*/
+
+.btnValidation
+{
+	height:25px;
+	font-family:verdana;
+	font-weight: bold;
+	border:0px;
+	background-color:#E97373;
+    color:#F6F5F5;
+    text-decoration: none;
+}
+
+.btnValidation:hover
+{
+	background-color:#DF4C4C;
+}
 
 
 
